Fix NetBSD PR bin/2597: lpr and NFS-non-root-exported fails